# enderscopy

./: .gitignore  01_demo_lights.ipynb  02_demo_stage.ipynb  03_demo_advanced_stage.ipynb  04_demo_stage_control_panel.ipynb  05_demo_camera_preview_save_reopen.ipynb  06_demo_scan_12wells.ipynb  07_demo_scan_patterns.ipynb  08_demo_simple_autofocus.ipynb  09_demo_multi_autofocus.ipynb  10_demo_multi_angle_shadows.ipynb  11_demo_smart_scanning.ipynb  LICENSE  MANIFEST.in  README.md  README.md~  README.rst  Untitled.ipynb  demo-stage-lights.ipynb  demo.ipynb  demo_advanced_stage.ipynb  demo_lights.ipynb  demo_scan_patterns.ipynb  demo_stage.ipynb  enderscope.py  installation.md  pyproject.toml  requirements.txt  serial_utils.py  test_panel_positions.ipynb
.ipynb_checkpoints/: autofocus-checkpoint.ipynb  demo_Fusion de code GUI_Manualmode et SnakeScan-checkpoint.ipynb  enderscope-sirine-checkpoint.py
addons/enderlights/: enderlights.ino
demos/: 03_demo_advanced_stage.ipynb  04_demo_stage_control_panel.ipynb  05_demo_camera_preview_save_reopen.ipynb  06_demo_scan_12wells.ipynb  08_demo_simple_autofocus.ipynb  09_demo_multi_autofocus.ipynb  README.rst
docs/: api_reference.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
enderscope/: __init__.py  enderscope.py
tests/: path2.gcode
